--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bacon Fansite</title>
+  <title>Kamilah Yusuf Eroje</title>
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
-  <h1>I Love Bacon</h1>
-  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-  <img src="https://emojipedia-us.s3.amazonaws.com/thumbs/240/apple/118/bacon_1f953.png" alt="bacon-img">
+  <h1>Kamilah Loves to Sleep in the Day and Stay Awake at Night...</h1>
+  <p>She ia a nocturnal 🌗</p>
+  <p>Click to See <strong><a href="https://www.merriam-webster.com/dictionary/nocturnal">Meaning of Nocturnal</a></strong></p>
+  <p>Foxes Are Nocturnals</p>
+  <img src="fox.png" alt="fox-img">
 </body>
 
-</html>
+</html
