--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Kamilah Yusuf Eroje</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="Nocturnal-Site/CSS/styles.css">
 </head>
 
 <body>
