--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>She ia a nocturnal 🌗</p>
   <p>Click to See <strong><a href="https://www.merriam-webster.com/dictionary/nocturnal">Meaning of Nocturnal</a></strong></p>
   <p>Foxes Are Nocturnals</p>
-  <img src="fox.png" alt="fox-img">
+  <img src="fox-modified.png" alt="fox-img">
 </body>
 
 </html
