--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>Kamilah Loves to Sleep in the Day and Stay Awake at Night...</h1>
-  <p>She ia a nocturnal 🌗</p>
+  <p>She is a nocturnal 🌗</p>
   <p>Click to See <strong><a href="https://www.merriam-webster.com/dictionary/nocturnal">Meaning of Nocturnal</a></strong></p>
   <p>Foxes Are Nocturnals</p>
   <img src="fox-modified.png" alt="fox-img">
