--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Kamilah Loves to Sleep in the Day and Stay Awake at Night...</h1>
   <p>She is a nocturnal 🌗</p>
   <p>Click to See <strong><a href="https://www.merriam-webster.com/dictionary/nocturnal">Meaning of Nocturnal</a></strong></p>
-  <p>Foxes and Bats Are Nocturnals, See Images Below</p>
+  <p>Foxes and Bats Are Nocturnals, See Images Below:</p>
   <img src="fox-modified.png" alt="fox-img">
   <img src="bat-modified.png" alt="bat-img">
 </body>
