--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Kamilah Yusuf Eroje</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
   <h1>Kamilah Loves to Sleep in the Day and Stay Awake at Night...</h1>
-  <p>She is a nocturnal 🌗</p>
+  <p>She ia a nocturnal 🌗</p>
   <p>Click to See <strong><a href="https://www.merriam-webster.com/dictionary/nocturnal">Meaning of Nocturnal</a></strong></p>
-  <p>Foxes and Bats Are Nocturnals, See Images Below:</p>
-  <img src="fox-modified.png" alt="fox-img">
-  <img src="bat-modified.png" alt="bat-img">
+  <p>Foxes Are Nocturnals</p>
+  <img class="foxes" src="fox-modified.png" alt="fox-img">
+  <img class="bats" src="bat-modified.png" alt="fox-img">
+  
 </body>
 
 </html
