--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
   <h1>Kamilah Loves to Sleep in the Day and Stay Awake at Night...</h1>
-  <p>She ia a nocturnal 🌗</p>
+  <p><em>She is a nocturnal 🌗</em></p>
   <p>Click to See <strong><a href="https://www.merriam-webster.com/dictionary/nocturnal">Meaning of Nocturnal</a></strong></p>
-  <p>Foxes Are Nocturnals</p>
+  <p>Foxes and Bats Are Nocturnals - See Images Below:</p>
   <img class="foxes" src="fox-modified.png" alt="fox-img">
   <img class="bats" src="bat-modified.png" alt="fox-img">
   
