--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <p><em>She is a nocturnal 🌗</em></p>
   <p>Click to See <strong><a href="https://www.merriam-webster.com/dictionary/nocturnal">Meaning of Nocturnal</a></strong></p>
   <p>Foxes and Bats Are Nocturnals - See Images Below:</p>
-  <img class="foxes" src="fox-modified.png" alt="fox-img">
-  <img class="bats" src="bat-modified.png" alt="fox-img">
+  <img class="foxes circular" src="fox-modified.png" alt="fox-img">
+  <img class="bats circular" src="bat-modified.png" alt="fox-img">
   
 </body>
 
